# stockwise

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.ps1  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  start.bat  start.sh  turbo.json
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: config.py  main.py  market_config.py
apps/backend/app/agents/: base.py  financial_agent.py  market_agent.py  news_agent.py  orchestrator.py  prompts.py  strategy_agent.py  tool_schemas.py
apps/backend/app/api/v1/: analysis.py  chat.py  router.py  stocks.py  watchlist.py
apps/backend/app/middleware/: cors.py  error_handler.py
apps/backend/app/schemas/: analysis.py  chat.py  common.py  stock.py  watchlist.py
apps/backend/app/services/: cache_service.py  edgar_service.py  news_service.py  sina_service.py  technical_service.py  yfinance_service.py
apps/backend/app/tools/: __init__.py  financial.py  market.py  news.py  shared.py
apps/frontend/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/(dashboard)/: layout.tsx  page.tsx
apps/frontend/src/app/(dashboard)/chat/: page.tsx
apps/frontend/src/app/(dashboard)/learn/: page.tsx
apps/frontend/src/app/dashboard/: layout.tsx  page.tsx
apps/frontend/src/components/: MarketSelector.tsx  Providers.tsx  StockChart.tsx
apps/frontend/src/lib/: api-client.ts  market-context.tsx  utils.ts
apps/frontend/src/types/: common.ts
docker/: Dockerfile.backend  Dockerfile.frontend
scripts/: dev.js
(+4 files in other folders)
